--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
             <span></span>
           </div>
 
-          <div class="inner-way-1"></div>
-          <div class="inner-way-2"></div>
-          <div class="inner-way-3"></div>
-          <div class="inner-way-4"></div>
-          <div class="inner-way-5"></div>
-    </div>    
+          <div class="b"></div>
+          <div class="outside">
+           
+          </div>
+
+    </div> 
+    <div class="coin-gab"></div>   
   </body>
 </html>
