Polished B of bitcoin

--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
             <span></span>
             </div>
 
-            <div class="bitcoin-symbol"></div>
+            <div class="bitcoin-symbol">
+             
+
+            </div>
+            <div class="b-ellipse-1"></div>
+            <div class="b-ellipse-2"></div>
 
 
     </div> 
