custom polygon paths

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
             <div class="path path-9"></div>
             <div class="path path-10"></div>
             <div class="path path-11"></div>
+  
+
 
             <div class="dashed-border">
                   <span></span>
@@ -102,9 +104,17 @@
                   <span></span>
             </div>
 
-            <div class="bitcoin-symbol"></div>
-            <div class="b-ellipse-1"></div>
-            <div class="b-ellipse-2"></div>
+            <div class="B-outline"></div>
+            <div class="B-ellipse-1"></div>
+            <div class="B-ellipse-2"></div>
+            <div class="B-hole-1"></div>
+            <div class="B-hole-2"></div>
+            <div class="trapezoid-1"></div>
+            <div class="trapezoid-2"></div>
+            <div class="trapezoid-3"></div>
+            <div class="trapezoid-4"></div>
+            <div class="trapezoid-5"></div>
+            <div class="trapezoid-6"></div>
             </div> 
       <div class="coin-gab"></div>   
 </body>
