rounded circuits base

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             <div class="path path-9"></div>
             <div class="path path-10"></div>
             <div class="path path-11"></div>
+            <div class="path path-12"></div>
+            <div class="path path-13"></div>
+            <div class="path path-14"></div>
+            <div class="path path-15"></div>
   
 
 
