--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             <div class="path path-11"></div>
             <div class="path path-12"></div>
             <div class="path path-13"></div>
-            <div class="path path-14"></div>
-            <div class="path path-15"></div>
+
   
 
 
@@ -113,12 +112,13 @@
             <div class="B-ellipse-2"></div>
             <div class="B-hole-1"></div>
             <div class="B-hole-2"></div>
-            <div class="trapezoid-1"></div>
+
+            <!--div class="trapezoid-1"></div>
             <div class="trapezoid-2"></div>
             <div class="trapezoid-3"></div>
             <div class="trapezoid-4"></div>
             <div class="trapezoid-5"></div>
-            <div class="trapezoid-6"></div>
+            <div class="trapezoid-6"></div-->
             </div> 
       <div class="coin-gab"></div>   
 </body>
