rect circuits with transform skew

--- a/index.html
+++ b/index.html
@@ -113,12 +113,16 @@
             <div class="B-hole-1"></div>
             <div class="B-hole-2"></div>
 
-            <!--div class="trapezoid-1"></div>
+
+            <div class="trapezoid-back"></div>
+            <div class="trapezoid-1"></div>
             <div class="trapezoid-2"></div>
             <div class="trapezoid-3"></div>
             <div class="trapezoid-4"></div>
             <div class="trapezoid-5"></div>
-            <div class="trapezoid-6"></div-->
+            <div class="trapezoid-6"></div>
+           
+            
             </div> 
       <div class="coin-gab"></div>   
 </body>
