--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                   <div class="circular circular-16"></div>
 
                   <div class="horizontal-back"></div>
+
                   <div class="horizontal-top horizontal-top-1"></div>
                   <div class="horizontal-top horizontal-top-2"></div>
                   <div class="horizontal-top horizontal-top-3"></div>
@@ -116,6 +117,7 @@
                   <div class="horizontal-top horizontal-top-6"></div>
                   <div class="horizontal-top horizontal-top-7"></div>
                   <div class="horizontal-top horizontal-top-8"></div>
+
                   <div class="horizontal-top horizontal-top-9"></div>
                   <div class="horizontal-top horizontal-top-10"></div>
                   <div class="horizontal-top horizontal-top-11"></div>
@@ -125,6 +127,9 @@
                   <div class="horizontal-top horizontal-top-15"></div>
                   <div class="horizontal-top horizontal-top-16"></div>
                   <div class="horizontal-top horizontal-top-17"></div>
+                  <div class="horizontal-top horizontal-top-18"></div>
+                  <div class="horizontal-top horizontal-top-19"></div>
+                  <div class="horizontal-top horizontal-top-20"></div>
 
 
                   <div class="horizontal-bottom horizontal-bottom-1"></div>
@@ -133,6 +138,13 @@
                   <div class="horizontal-bottom horizontal-bottom-4"></div>
                   <div class="horizontal-bottom horizontal-bottom-5"></div>
                   <div class="horizontal-bottom horizontal-bottom-6"></div>
+
+                  <div class="horizontal-bottom horizontal-bottom-7"></div>
+                  <div class="horizontal-bottom horizontal-bottom-8"></div>
+                  <div class="horizontal-bottom horizontal-bottom-9"></div>
+                  <div class="horizontal-bottom horizontal-bottom-10"></div>
+                  <div class="horizontal-bottom horizontal-bottom-11"></div>
+                  <div class="horizontal-bottom horizontal-bottom-12"></div>
 
                   <div class="B-outline"></div>
                   <div class="B-ellipse-1"></div>
