better positioning of coin message

--- a/index.html
+++ b/index.html
@@ -1,99 +1,114 @@
+<!DOCTYPE html>
 <html>
-<head>       
+
+<head>
       <title>Bitcoin coin made in CSS</title>
       <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
-<body>       
+<body>
       <div class="coin">
             <div class="coin-message">
                   <div>
-                        <span>B
-                        <span>I
-                        <span>T
-                        <span>C
-                        <span>O
-                        <span>I
-                        <span>N
-                        <span>
-                        <span>D
-                        <span>I
-                        <span>G
-                        <span>I
-                        <span>T
-                        <span>A
-                        <span>L
-                        <span>
-                        <span>D
-                        <span>E
-                        <span>S
-                        <span>C
-                        <span>E
-                        <span>N
-                        <span>T
-                        <span>R
-                        <span>A
-                        <span>L
-                        <span>I
-                        <span>Z
-                        <span>E
-                        <span>D
-                        <span>
-                        <span>P
-                        <span>E
-                        <span>E
-                        <span>R
-                        <span>
-                        <span>T
-                        <span>O
-                        <span>
-                        <span>P
-                        <span>E
-                        <span>E
-                        <span>R         
+
                   </div>
             </div>
-          
-                  <div class="dashed-border">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                  </div>
 
-            <div class="circular circular-1"></div>
-            <div class="circular circular-2"></div>
-            <div class="circular circular-3"></div>
-            <div class="circular circular-4"></div>
+                <div class="estrellas inverso">
+                  <span>B</span>
+                  <span>I</span>
+                  <span>T</span>
+                  <span>C</span>
+                  <span>O</span>
+                  <span>I</span>
+                  <span>N</span>
+                  <span></span>
+                  <span>D</span>
+                  <span>I</span>
+                  <span>G</span>
+                  <span>I</span>
+                  <span>T</span>
+                  <span>A</span>
+                  <span>L</span>
+                  <span></span>
+                  <span>D</span>
+                  <span>E</span>
+                  <span>S</span>
+                  <span>C</span>
+                  <span>E</span>
+                  <span>N</span>
+                  <span>T</span>
+                  <span>R</span>
+                  <span>A</span>
+                  <span>L</span>
+                  <span>I</span>
+                  <span>Z</span>
+                  <span>E</span>
+                  <span>D</span>
+                  <span></span>
+                  <span>P</span>
+                  <span>E</span>
+                  <span>E</span>
+                  <span>R</span>
+                  <span></span>
+                  <span>T</span>
+                  <span>O</span>
+                  <span></span>
+                  <span>P</span>
+                  <span>E</span>
+                  <span>E</span>
+                  <span>R</span>
+                </div>
+
+            <div class="rectangles">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+            </div>
+
+            <div class="circumferences">
+                  <div class="circular circular-1"></div>
+                  <div class="circular circular-2"></div>
+                  <div class="circular circular-3"></div>
+                  <div class="circular circular-4"></div>
                   <div class="circular circular-5"></div>
                   <div class="circular circular-6"></div>
                   <div class="circular circular-7"></div>
@@ -106,9 +121,10 @@
                   <div class="circular circular-14"></div>
                   <div class="circular circular-15"></div>
                   <div class="circular circular-16"></div>
+            </div>
 
+            <div class="lines">
                   <div class="horizontal-back"></div>
-
                   <div class="horizontal-top horizontal-top-1"></div>
                   <div class="horizontal-top horizontal-top-2"></div>
                   <div class="horizontal-top horizontal-top-3"></div>
@@ -117,7 +133,6 @@
                   <div class="horizontal-top horizontal-top-6"></div>
                   <div class="horizontal-top horizontal-top-7"></div>
                   <div class="horizontal-top horizontal-top-8"></div>
-
                   <div class="horizontal-top horizontal-top-9"></div>
                   <div class="horizontal-top horizontal-top-10"></div>
                   <div class="horizontal-top horizontal-top-11"></div>
@@ -130,29 +145,29 @@
                   <div class="horizontal-top horizontal-top-18"></div>
                   <div class="horizontal-top horizontal-top-19"></div>
                   <div class="horizontal-top horizontal-top-20"></div>
-
-
                   <div class="horizontal-bottom horizontal-bottom-1"></div>
                   <div class="horizontal-bottom horizontal-bottom-2"></div>
                   <div class="horizontal-bottom horizontal-bottom-3"></div>
                   <div class="horizontal-bottom horizontal-bottom-4"></div>
                   <div class="horizontal-bottom horizontal-bottom-5"></div>
                   <div class="horizontal-bottom horizontal-bottom-6"></div>
-
                   <div class="horizontal-bottom horizontal-bottom-7"></div>
                   <div class="horizontal-bottom horizontal-bottom-8"></div>
                   <div class="horizontal-bottom horizontal-bottom-9"></div>
                   <div class="horizontal-bottom horizontal-bottom-10"></div>
                   <div class="horizontal-bottom horizontal-bottom-11"></div>
                   <div class="horizontal-bottom horizontal-bottom-12"></div>
+            </div>
 
+            <div class="symbol">
                   <div class="B-outline"></div>
                   <div class="B-ellipse-1"></div>
                   <div class="B-ellipse-2"></div>
                   <div class="B-hole-1"></div>
-                  <div class="B-hole-2"></div>           
-            
-      </div> 
-      <div class="coin-gab"></div>   
+                  <div class="B-hole-2"></div>
+            </div>
+      </div>
+      <div class="coin-gab"></div>
 </body>
+
 </html>
