added more coin letters

--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
 </head>
 
 <body>
+
       <div class="coin">
-            <div class="coin-message">
-                  <div>
 
-                  </div>
-            </div>
-
-                <div class="estrellas inverso">
+            <div class="letters">
                   <span>B</span>
                   <span>I</span>
                   <span>T</span>
@@ -58,7 +54,7 @@
                   <span>E</span>
                   <span>E</span>
                   <span>R</span>
-                </div>
+            </div>
 
             <div class="rectangles">
                   <span></span>
@@ -160,11 +156,11 @@
             </div>
 
             <div class="symbol">
-                  <div class="B-outline"></div>
-                  <div class="B-ellipse-1"></div>
-                  <div class="B-ellipse-2"></div>
-                  <div class="B-hole-1"></div>
-                  <div class="B-hole-2"></div>
+                  <div class="symbol-outline"></div>
+                  <div class="symbol-ellipse-1"></div>
+                  <div class="symbol-ellipse-2"></div>
+                  <div class="symbol-hole-1"></div>
+                  <div class="symbol-hole-2"></div>
             </div>
       </div>
       <div class="coin-gab"></div>
