--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
       <title>Bitcoin coin made in CSS</title>
       <link rel="stylesheet" href="style.css" type="text/css">
+      <link rel="stylesheet" href="font.css" type="text/css">
 </head>
 
 <body>
@@ -11,49 +12,458 @@
       <div class="coin">
 
             <div class="letters">
-                  <span>B</span>
-                  <span>I</span>
-                  <span>T</span>
-                  <span>C</span>
-                  <span>O</span>
-                  <span>I</span>
-                  <span>N</span>
-                  <span></span>
-                  <span>D</span>
-                  <span>I</span>
-                  <span>G</span>
-                  <span>I</span>
-                  <span>T</span>
-                  <span>A</span>
-                  <span>L</span>
-                  <span></span>
-                  <span>D</span>
-                  <span>E</span>
-                  <span>S</span>
-                  <span>C</span>
-                  <span>E</span>
-                  <span>N</span>
-                  <span>T</span>
-                  <span>R</span>
-                  <span>A</span>
-                  <span>L</span>
-                  <span>I</span>
-                  <span>Z</span>
-                  <span>E</span>
-                  <span>D</span>
-                  <span></span>
-                  <span>P</span>
-                  <span>E</span>
-                  <span>E</span>
-                  <span>R</span>
-                  <span></span>
-                  <span>T</span>
-                  <span>O</span>
-                  <span></span>
-                  <span>P</span>
-                  <span>E</span>
-                  <span>E</span>
-                  <span>R</span>
+                  <span>
+                        <div class="css-font">
+                              <div class="B"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="I"></div>
+                        </div>
+                  </span>
+
+                  <span>
+
+                        <div class="css-font">
+                              <div class="T"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="C"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="I"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="N"></div>
+                        </div>
+                  </span>
+
+
+                  <span>
+                        <div class="css-font">
+                              <div class="D"></div>
+                        </div>
+                  </span>
+
+                  <span>
+
+                        <div class="css-font">
+                              <div class="I"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="G"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="I"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="T"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="A"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="L"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="D"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="C"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="N"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="T"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="R"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="A"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="L"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="I"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="Z"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="D"></div>
+                        </div>
+                  </span>
+
+
+                  <span>
+                        <div class="css-font">
+                              <div class="P"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="R"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="T"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="P"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="R"></div>
+                        </div>
+                  </span>
+
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+
+                  <span>
+                        <div class="css-font">
+                              <div class="T"></div>
+                        </div>
+                  </span>
+
+
+                  <span>
+                        <div class="css-font">
+                              <div class="R"></div>
+                        </div>
+                  </span>
+
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="Y"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="Z"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="F"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="I"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="N"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="C"></div>
+                        </div>
+                  </span>
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="P"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="P"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="R"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="M"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="J"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="B"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="M"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="O"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="N"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="T"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="A"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="R"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="Y"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="M"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="E"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="T"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="A"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="L"></div>
+                        </div>
+                  </span>
+
+                  <span>
+                        <div class="css-font">
+                              <div class="S"></div>
+                        </div>
+                  </span>
+
+
             </div>
 
             <div class="rectangles">
@@ -163,7 +573,10 @@
                   <div class="symbol-hole-2"></div>
             </div>
       </div>
+
+      <div class="ilumination"></div>
       <div class="coin-gab"></div>
+
 </body>
 
 </html>
