--- a/index.html
+++ b/index.html
@@ -508,6 +508,12 @@
                   <span></span>
                   <span></span>
                   <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
             </div>
 
             <div class="circumferences">
