--- a/index.html
+++ b/index.html
@@ -542,6 +542,19 @@
                   <span></span>
                   <span></span>
                   <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
             </div>
 
             <div class="circumferences">
