finishing lines of the coin

--- a/index.html
+++ b/index.html
@@ -578,6 +578,56 @@
 
             <div class="lines">
                   <div class="horizontal-back"></div>
+                  <div class="horizontal-top horizontal-top-a"></div>
+                  <div class="horizontal-top horizontal-top-b"></div>
+                  <div class="horizontal-top horizontal-top-c"></div>
+                  <div class="horizontal-top horizontal-top-d"></div>
+                  <div class="horizontal-top horizontal-top-e"></div>
+                  <div class="horizontal-top horizontal-top-f"></div>
+                  <div class="horizontal-top horizontal-top-g"></div>
+                  <div class="horizontal-top horizontal-top-h"></div>
+                  <div class="horizontal-top horizontal-top-i"></div>
+                  <div class="horizontal-top horizontal-top-j"></div>
+                  <div class="horizontal-top horizontal-top-k"></div>
+                  <div class="horizontal-top horizontal-top-l"></div>
+                  <div class="horizontal-top horizontal-top-m"></div>
+                  <div class="horizontal-top horizontal-top-n"></div>
+                  <div class="horizontal-top horizontal-top-o"></div>
+                  <div class="horizontal-top horizontal-top-p"></div>
+                  <div class="horizontal-top horizontal-top-q"></div>
+                  <div class="horizontal-top horizontal-top-r"></div>
+                  <div class="horizontal-top horizontal-top-s"></div>
+                  <div class="horizontal-top horizontal-top-t"></div>
+                  <div class="horizontal-top horizontal-top-u"></div>
+                  <div class="horizontal-top horizontal-top-v"></div>
+                  <div class="horizontal-top horizontal-top-x"></div>
+                  <div class="horizontal-top horizontal-top-a1"></div>
+                  <div class="horizontal-top horizontal-top-a2"></div>
+                  <div class="horizontal-top horizontal-top-a3"></div>
+                  <div class="horizontal-top horizontal-top-a4"></div>
+                  <div class="horizontal-top horizontal-top-a5"></div>
+                  <div class="horizontal-top horizontal-top-a6"></div>
+                  <div class="horizontal-top horizontal-top-a7"></div>
+                  <div class="horizontal-top horizontal-top-a8"></div>
+                  <div class="horizontal-top horizontal-top-a9"></div>
+                  <div class="horizontal-top horizontal-top-a10"></div>
+                  <div class="horizontal-top horizontal-top-a11"></div>
+                  <div class="horizontal-top horizontal-top-a12"></div>
+                  <div class="horizontal-top horizontal-top-a13"></div>
+                  <div class="horizontal-top horizontal-top-a14"></div>
+                  <div class="horizontal-top horizontal-top-a15"></div>
+                  <div class="horizontal-top horizontal-top-a16"></div>
+                  <div class="horizontal-top horizontal-top-a17"></div>
+                  <div class="horizontal-top horizontal-top-a18"></div>
+                  <div class="horizontal-top horizontal-top-a19"></div>
+                  <div class="horizontal-top horizontal-top-a20"></div>
+                  <div class="horizontal-top horizontal-top-a21"></div>
+                  <div class="horizontal-top horizontal-top-a22"></div>
+                  <div class="horizontal-top horizontal-top-a23"></div>
+                  <div class="horizontal-top horizontal-top-a24"></div>
+                  <div class="horizontal-top horizontal-top-a25"></div>
+
+
                   <div class="horizontal-top horizontal-top-1"></div>
                   <div class="horizontal-top horizontal-top-2"></div>
                   <div class="horizontal-top horizontal-top-3"></div>
