more structural code

--- a/index.html
+++ b/index.html
@@ -626,6 +626,38 @@
                   <div class="horizontal-top horizontal-top-a23"></div>
                   <div class="horizontal-top horizontal-top-a24"></div>
                   <div class="horizontal-top horizontal-top-a25"></div>
+                  <div class="horizontal-top horizontal-top-a26"></div>
+                  <div class="horizontal-top horizontal-top-a27"></div>
+                  <div class="horizontal-top horizontal-top-a28"></div>
+                  <div class="horizontal-top horizontal-top-a29"></div>
+                  <div class="horizontal-top horizontal-top-a30"></div>
+
+                  <div class="horizontal-top horizontal-top-a31"></div>
+                  <div class="horizontal-top horizontal-top-a32"></div>
+                  <div class="horizontal-top horizontal-top-a33"></div>
+                  <div class="horizontal-top horizontal-top-a34"></div>
+                  <div class="horizontal-top horizontal-top-a35"></div>
+                  <div class="horizontal-top horizontal-top-a36"></div>
+                  <div class="horizontal-top horizontal-top-a37"></div>
+
+                  <div class="horizontal-top horizontal-top-a38"></div>
+                  <div class="horizontal-top horizontal-top-a39"></div>
+                  <div class="horizontal-top horizontal-top-a40"></div>
+                  <div class="horizontal-top horizontal-top-a41"></div>
+                  <div class="horizontal-top horizontal-top-a42"></div>
+                  <div class="horizontal-top horizontal-top-a43"></div>
+                  <div class="horizontal-top horizontal-top-a44"></div>
+
+                  <div class="horizontal-top horizontal-top-a45"></div>
+                  <div class="horizontal-top horizontal-top-a46"></div>
+                  <div class="horizontal-top horizontal-top-a47"></div>
+
+                  <div class="horizontal-top horizontal-top-a48"></div>
+                  <div class="horizontal-top horizontal-top-a49"></div>
+                  <div class="horizontal-top horizontal-top-a50"></div>
+                  <div class="horizontal-top horizontal-top-a51"></div>
+                  <div class="horizontal-top horizontal-top-a52"></div>
+                  <div class="horizontal-top horizontal-top-a53"></div>
 
 
                   <div class="horizontal-top horizontal-top-1"></div>
