--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+      <section class="container">
       <div class="coin">
 
             <div class="letters">
@@ -631,7 +632,6 @@
                   <div class="horizontal-top horizontal-top-a28"></div>
                   <div class="horizontal-top horizontal-top-a29"></div>
                   <div class="horizontal-top horizontal-top-a30"></div>
-
                   <div class="horizontal-top horizontal-top-a31"></div>
                   <div class="horizontal-top horizontal-top-a32"></div>
                   <div class="horizontal-top horizontal-top-a33"></div>
@@ -639,7 +639,6 @@
                   <div class="horizontal-top horizontal-top-a35"></div>
                   <div class="horizontal-top horizontal-top-a36"></div>
                   <div class="horizontal-top horizontal-top-a37"></div>
-
                   <div class="horizontal-top horizontal-top-a38"></div>
                   <div class="horizontal-top horizontal-top-a39"></div>
                   <div class="horizontal-top horizontal-top-a40"></div>
@@ -647,19 +646,18 @@
                   <div class="horizontal-top horizontal-top-a42"></div>
                   <div class="horizontal-top horizontal-top-a43"></div>
                   <div class="horizontal-top horizontal-top-a44"></div>
-
                   <div class="horizontal-top horizontal-top-a45"></div>
                   <div class="horizontal-top horizontal-top-a46"></div>
                   <div class="horizontal-top horizontal-top-a47"></div>
-
                   <div class="horizontal-top horizontal-top-a48"></div>
                   <div class="horizontal-top horizontal-top-a49"></div>
                   <div class="horizontal-top horizontal-top-a50"></div>
                   <div class="horizontal-top horizontal-top-a51"></div>
                   <div class="horizontal-top horizontal-top-a52"></div>
                   <div class="horizontal-top horizontal-top-a53"></div>
-
-
+                  <div class="horizontal-top horizontal-top-a54"></div>
+                  <div class="horizontal-top horizontal-top-a55"></div>
+                  <div class="horizontal-top horizontal-top-a56"></div>
                   <div class="horizontal-top horizontal-top-1"></div>
                   <div class="horizontal-top horizontal-top-2"></div>
                   <div class="horizontal-top horizontal-top-3"></div>
@@ -679,7 +677,6 @@
                   <div class="horizontal-top horizontal-top-17"></div>
                   <div class="horizontal-top horizontal-top-18"></div>
                   <div class="horizontal-top horizontal-top-19"></div>
-                  <div class="horizontal-top horizontal-top-20"></div>
                   <div class="horizontal-bottom horizontal-bottom-1"></div>
                   <div class="horizontal-bottom horizontal-bottom-2"></div>
                   <div class="horizontal-bottom horizontal-bottom-3"></div>
@@ -705,6 +702,8 @@
 
       <div class="ilumination"></div>
       <div class="coin-gab"></div>
+
+</section>
 
 </body>
 
