--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
                   <span>
                         <div class="css-font">
-                              <div class="O"></div>
+                              <div class="I"></div>
                         </div>
                   </span>
 
@@ -287,7 +287,7 @@
 
                   <span>
                         <div class="css-font">
-                              <div class="O"></div>
+                              <div class="I"></div>
                         </div>
                   </span>
 
@@ -299,7 +299,7 @@
 
                   <span>
                         <div class="css-font">
-                              <div class="O"></div>
+                              <div class="I"></div>
                         </div>
                   </span>
 
