--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-      <title>Bitcoin coin made in CSS</title>
+      <title>Bitcoin coin made in pure CSS</title>
       <link rel="stylesheet" href="style.css" type="text/css">
       <link rel="stylesheet" href="font.css" type="text/css">
 </head>
@@ -698,9 +698,11 @@
                   <div class="symbol-hole-1"></div>
                   <div class="symbol-hole-2"></div>
             </div>
+
+            <div class="ilumination"></div>
       </div>
 
-      <div class="ilumination"></div>
+  
       <div class="coin-gab"></div>
 
 </section>
