--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <title>Bitcoin coin made in pure CSS</title>
       <link rel="stylesheet" href="style.css" type="text/css">
       <link rel="stylesheet" href="font.css" type="text/css">
+      <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101178443);</script>
+      <script async src="//static.getclicky.com/js"></script>
 </head>
 
 <body>
