--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
 
       <section class="container">
+          
+            <div class="link-profile">
+                  By Paulo Miranda
+                  <span class="separator">|</span>
+                  <a href="https://github.com/paulorom/" target="_blank">gitHub.com/paulorom</a>
+            </div>
+            
       <div class="coin">
 
             <div class="letters">
