--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                   By Paulo Miranda
                   <span class="separator">|</span>
                   <a href="https://github.com/paulorom/" target="_blank">gitHub.com/paulorom</a>
+                  <span class="separator">|</span>
+                  Buy me a beer [BITCOIN]: 329uUBQfCqk7BEBbNYuN3MJYmFfB9mhwsn
             </div>
             
       <div class="coin">
