--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <span class="separator">|</span>
                   <a href="https://github.com/paulorom/" target="_blank">gitHub.com/paulorom</a>
                   <span class="separator">|</span>
-                  Buy me a beer [BITCOIN]: <h3>329uUBQfCqk7BEBbNYuN3MJYmFfB9mhwsn</h3>
+                  <h3>Buy me a beer [BITCOIN]:</h3><h2>329uUBQfCqk7BEBbNYuN3MJYmFfB9mhwsn</h2>
             </div>
             
       <div class="coin">
