--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
       <section class="container">
-          
+            <h1>Bitcoin coin made in pure CSS</h1>
             <div class="link-profile">
                   By Paulo Miranda
                   <span class="separator">|</span>
